--- a/module-2-languages/03-advanced/bs-config.json
+++ b/module-2-languages/03-advanced/bs-config.json
@@ -1,5 +1,5 @@
 {
-  "port": 3001,
-  "files": ["./transpiled/**/*.{html,htm,css,js}"],
-  "server": { "baseDir": "./transpiled" }
+  "port": 3000,
+  "files": ["./src/**/*.{html,htm,css,js}"],
+  "server": { "baseDir": "./src" }
 }
