--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install
         run: |
-          npm ci
+          npm install
           npm install @rollup/rollup-linux-x64-gnu --save-optional
       - name: Tests
         run: npm test
