Add E2E tests, data-testids and configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,3 +17,9 @@ jobs:
           npm install @rollup/rollup-linux-x64-gnu --save-optional
       - name: Tests
         run: npm test
+      - name: Cypress E2E Tests
+        run: |
+          npm run cypress:run
+      - name: Playwright E2E Tests
+        run: |
+          npm run pw:run
