--- a/module-5-testing/lab/.gitignore
+++ b/module-5-testing/lab/.gitignore
@@ -8,3 +8,11 @@ junit.xml
 *.orig
 .awcache
 public
+cypress/videos
+cypress/screenshots
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
