--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm test
       - name: Cypress E2E Tests
         run: |
-          npm run cypress:run
+          npm run cy:run
       - name: Playwright E2E Tests
         run: |
           npm run pw:run
