--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ jobs:
           npm install @rollup/rollup-linux-x64-gnu --save-optional
       - name: Tests
         run: npm test
+      - name: Start local server
+        run: |
+          npm run start:dev &
+          sleep 5
       - name: Cypress E2E Tests
         run: |
           npm run cy:run
