Fix missing browsers playwright

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,5 @@ jobs:
           npm run cy:run
       - name: Playwright E2E Tests
         run: |
+          npx playwright install
           npm run pw:run
