Only use chromium in pw.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Playwright E2E Tests
         run: |
           npx playwright install
-          npm run pw:run
+          npm run pw:run --project=chromium
